--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,39 @@
 [project]
 name = "amazon-bedrock-cli"
-version = "0.1.0"
-description = "Add your description here"
+dynamic = ["version"]
+description = "A CLI tool for Amazon Bedrock"
 readme = "README.md"
-requires-python = ">=3.12"
+authors = [
+    { name = "Dennis Traub", email = "dennis.traub@gmail.com" }
+]
+license = { text = "MIT" }
+requires-python = ">=3.8"
 dependencies = [
     "amazon-bedrock>=0.0.5",
+    "click>=8.1.8",
+]
+classifiers = [
+    "Development Status :: 2 - Pre-Alpha",
+    "Intended Audience :: Developers",
+    "Natural Language :: English",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
 ]
 
-[project.optional-dependencies]
-dev = [
-    "amazon-bedrock @ file:///${PWD}/amazon-bedrock-python"
-]
+[project.urls]
+Source = "https://github.com/DennisTraub/amazon-bedrock-cli-python"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.hatch.version]
+path = "src/amazon_bedrock_cli/__init__.py"
+
+[project.scripts]
+bedrock = "amazon_bedrock_cli.cli:cli"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
